--- a/WORKDIR/Dockerfile
+++ b/WORKDIR/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux:9
 RUN mkdir /tmp/niharika
-RUN cd /tmp/niharika
+WORKDIR /tmp/niharika
 RUN pwd
 RUN echo "hello i am niharika" > hello.txt
 CMD ["sleep", "100"]
