--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -2,5 +2,6 @@ FROM almalinux:9
 ENV course="devops with aws" \
     trainer="Niharika" \
     duration="120hrs"
-RUN echo "Hello${trainer}}" > /tmp/devops.txt
+ARG ${username:-niharika}
+RUN echo "Hello${trainer}" > /tmp/devops.txt
 CMD ["sleep", "100"]
