--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,7 +1,8 @@
-FROM almalinux:9
+ARG version
+FROM almalinux:${version:-9}
 ENV course="devops with aws" \
     trainer="Niharika" \
     duration="120hrs"
 ARG USERNAME=Niharika
-RUN echo "Hello user: ${USERNAME}" > /tmp/devops.txt
+RUN echo "Hello user: ${USERNAME}, image version: ${version}"> /tmp/devops.txt
 CMD ["sleep", "100"]
